18406
If we have both package and object with the same name we do not reject that. For example, this code compiles:

{code}
package p { object A }
object p { object B }
{code}

Even if Scala spec (9.2) says:
{quote}
It is illegal to have a package with the same fully qualiﬁed name as a module or a class.
{quote}

However, it turns out that we do not properly detect the name clash only if both object and package are defined in default package. For example, this code fails to compile:
{code}
package a

package p { object A }
object p { object B }
{code}

with an proper error message:

{code}
$ scalac -d classes/ Test.scala
Test.scala:4: error: p is already defined as package p
object p { object B }
       ^
one error found
{code}

Therefore I'm setting priority for this ticket to minor as in majority of cases it seems like we are ok.
